typescript/checker/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            329,
        ),
        hi: BytePos(
            330,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts:15:5
   |
15 | var c: C;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            340,
        ),
        hi: BytePos(
            341,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts:16:5
   |
16 | var d: D;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            351,
        ),
        hi: BytePos(
            352,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts:17:5
   |
17 | var e: E;
   |     ^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts:18:1
   |
18 | c = e;
   | ^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            375,
        ),
        hi: BytePos(
            379,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts:19:10
   |
19 | var r = c.foo(1, 1);
   |          ^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            398,
        ),
        hi: BytePos(
            402,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts:20:11
   |
20 | var r2 = e.foo(1, '');
   |           ^^^^

